log/build_2025-12-19_11-38-30/tower_builder/stderr.log
  File "/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main_mod_hub.py", line 278
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

